--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>ToDo</title>
 </head>
 <body>
   <input type="text" id="title">
   <input type="text" id="description">
   <input type="date" id="date">
-
   <button id="addButton">LISA</button>
   <button id="saveButton">SALVESTA</button>
   <button id="loadButton">LAADI</button>
-
+ 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="index.js"></script>
 </body>
